<resources>
    <string name="popup_wifi_signal_weak">Wi-Fi signal is too weak. Current call will end.</string>
    <string name="unhide_buddy_now_shown">%s now shown</string>
    <string name="unhide_all_buddy_toast">All buddies now shown</string>
    <string name="version_update_check">Checking for updates...</string>
    <string name="version_update_check_failed">Failed to check for new version. Network error occurred.</string>
    <string name="version_update_msg">New version available. Update now?</string>
    <string name="version_critical_update_msg">A new version of ChatON Voice &amp; Video Chat is available. Upgrade your software to keep using this app. Upgrade now?</string>
    <string name="popup_msg_fail_change_calltype_conference_to_p2p">An unexpected error occurred. Unable to switch to 1:1 chat. ChatON Voice &amp; Video Chat has ended.</string>
    <string name="voice_control">Voice control</string>
    <string name="voice_control_incoming_call_msg">You can answer or reject calls with the voice commands \'Answer\' and \'Reject‘. Speaker will turn on when you answer a call using voice command.</string>
    <string name="voice_control_incoming_call_msg_new">You can answer or reject calls with the voice commands %1$s and %2$s. Speaker will turn on when you answer a call using voice command.</string>
    <string name="incoming_call_from">Incoming call from %s</string>
    <string name="network_error_try_later">Network error occurred. Try again.</string>
    <string name="no_phone_number">No phone number</string>
    <string name="invalid_data">Invalid data</string>
    <string name="no_data">No data</string>
    <string name="popup_msg_network_weak_during_videocall">Signal too weak. Video call image quality may be affected.</string>
    <string name="setting_sync_toast_msg">Synchronizing...</string>
    <string name="my_profile_msg_hint">Enter status message</string>
    <string name="add_buddy_no_lists">No lists</string>
    <string name="add_buddy_hint">example@samsung.com</string>
    <string name="delete_last_buddy_msg">Deleting buddy will delete group. Continue?</string>
    <string name="calllog_no_title">No logs</string>
    <string name="popup_reject_invalid_characters">Invalid characters</string>
    <string name="headset">Headset</string>
    <string name="invite_buddy">Invite buddies</string>
    <string name="pref_title_1_6">Synchronization</string>
    <string name="pref_title_1_5">Wi-Fi only</string>
    <string name="pref_summary_1_5">Use ChatON V only if Wi-Fi is available</string>
    <string name="pref_title_1_8">Answering/ending calls</string>
    <string name="pref_summary_1_8">Manage call answering/ending settings</string>
    <string name="pref_title_1_9">Turn off screen during calls</string>
    <string name="pref_summary_1_9">Turn on proximity sensor during calls</string>
    <string name="popup_msg_network_weak_during_videocall_atnt">Your audio or video quality may vary due to network conditions</string>
    <string name="pref_title_vibrate_when_ringing">Vibrate when ringing</string>
    <string name="option_title_buddies">Buddies</string>
    <string name="option_title_logs">Logs</string>
    <string name="option_title_settings">Settings</string>
    <string name="voice_call">Voice call</string>
    <string name="last_call">Last call</string>
    <string name="dialled_call">Dialed calls</string>
    <string name="received_call">Received calls</string>
    <string name="all_calls">All calls</string>
    <string name="voice_call_menu_buddy_list">Buddies list</string>
    <string name="prference_buddy_suggestion">Buddy suggestions</string>
    <string name="prference_buddy_suggestion_summary">Receive buddy suggestions from ChatON V</string>
    <string name="prference_exclude_me">Exclude me</string>
    <string name="prference_exclude_me_summary">I would not like to be suggested to other people</string>
    <string name="preference_answer_key">The home key answers calls</string>
    <string name="preference_answer_key_summary">Accept incoming calls by pressing the home key</string>
    <string name="preference_power_key">The power key ends calls</string>
    <string name="preference_power_key_summary">Press the power key to end calls. This will not turn off the screen.</string>
    <string name="preference_answer_call_using_voice">Voice control</string>
    <string name="preference_answer_call_using_voice_summary">Answer calls using voice</string>
    <string name="unblock_all_buddy_dialog">This will unblock all contacts</string>
    <string name="unhide_all_buddy_dialog">Show all contacts</string>
    <string name="close">Close</string>
    <string name="mobile">Mobile</string>
    <string name="datausage_cycle_set">Set</string>
    <string name="datausage_cycle_description">On this date each month:</string>
    <string name="datausage_cycle_dialog_title">Usage cycle reset date</string>
    <string name="datausage_change_cycle">Change cycle</string>
    <string name="data_network_usage_cycle">Data usage cycle</string>
    <string name="calllog_all_logs">All logs</string>
    <string name="calllog_all_voice_calls">All voice calls</string>
    <string name="calllog_all_video_calls">All video calls</string>
    <string name="calllog_all_single_calls">All single calls</string>
    <string name="calllog_all_group_calls">All group calls</string>
    <string name="calllog_missed_calls">Missed calls</string>
    <string name="calllog_dialed_calls">Dialed calls</string>
    <string name="calllog_received_calls">Received calls</string>
    <string name="calllog_rejected_calls">Rejected calls</string>
    <string name="calllog_rejected_messages">Rejected messages</string>
    <string name="calllog_rejected_call">Rejected</string>
    <string name="calllog_cancelled_call">Canceled</string>
    <string name="unsaved_buddy">Unsaved buddy</string>
    <string name="unable_invite_buddy_invalid_state">Unable to invite buddies. Your call was not connected.</string>
    <string name="unable_invite_buddy_invalid_call_switching">Unable to invite buddies while switching call</string>
    <string name="unable_invite_buddy_invalid_call_hold">Unable to invite buddies while the call is on hold</string>
    <string name="unable_invite_buddy_invalid_chatonv_call_hold">Unable to restart share screen while ChatON V call is on hold</string>
    <string name="unable_make_call_wifi_only_on">Wi-Fi not available. Turn on Wi-Fi or disable Wi-Fi only. Using data networks may incur additional charges.</string>
    <string name="calllog_delete">This log will be deleted</string>
    <string name="calllog_all_delete">All logs will be deleted</string>
    <string name="calllog_some_delete">The selected logs will be deleted</string>
    <string name="power_key_pop_up">Unable to set the power key to end calls while proximity sensor is off. Proximity sensor will be turned on.</string>
    <string name="proximity_pop_up">Unable to turn off proximity sensor while the power key is set to end calls. The power key will no longer end calls.</string>
    <string name="group_member_count">%d contacts</string>
    <string name="phone_privacy_number">Show my number</string>
    <string name="wait_other_party_confirm">Awaiting confirmation...</string>
    <string name="rejected_request_record">%s rejected your request to record this call. Recording canceled.</string>
    <string name="unable_make_call_exceed_member">Maximum number of buddies in a group chat exceeded</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="save">Save</string>
    <string name="config_number">Unable to proceed without authentication</string>
    <string name="join_static_phoneno">Phone number</string>
    <string name="join_select_country_code">Select country code</string>
    <string name="join_input_phone_no">Register your phone number</string>
    <string name="join_input_phone_no_desc">You will receive a %d-digit verification code via SMS</string>
    <string name="conf_firmware_version">Firmware version</string>
    <string name="call_btn_videocall">Video call</string>
    <string name="call_btn_share_screen">Share screen</string>
    <string name="call_btn_share_screen_end">End screen share</string>
    <string name="call_btn_translator_on">Enable translator</string>
    <string name="call_btn_translator_off">Disable translator</string>
    <string name="call_btn_member_list">Show members</string>
    <string name="preference_3_1_title">Set reject messages</string>
    <string name="preference_3_1_summary">Edit reject messages</string>
    <string name="preference_3_1_5_title">Ringtone</string>
    <string name="preference_3_2_title">Call alert</string>
    <string name="preference_3_2_summary">Set call alerts</string>
    <string name="preference_3_2_2_title">Call status tones</string>
    <string name="preference_3_2_3_title">Alerts during calls</string>
    <string name="preference_3_2_3_summary">Alarms and message notifications will occur during calls</string>
    <string name="preference_5_title">Video call settings</string>
    <string name="preference_5_4_title">Video call quality</string>
    <string name="low_quality">Low quality</string>
    <string name="preference_6_2_summary">Total data usage: %s</string>
    <string name="preference_general_settings">General settings</string>
    <string name="callsettings_callalert_call_status_vibrations">Call vibrations</string>
    <string name="callsettings_callalert_answer_vibration">Answer vibration</string>
    <string name="callsettings_callalert_answer_vibration_summary">The caller\'s phone vibrates when recipient answers their phone</string>
    <string name="callsettings_callalert_end_vibration">Call-end vibration</string>
    <string name="callsettings_callalert_end_vibration_summary">The caller\'s phone will vibrate when the call ends</string>
    <string name="callsettings_callalert_call_conn_tone">Call connect tone</string>
    <string name="callsettings_callalert_minute_minder">Minute minder</string>
    <string name="callsettings_callalert_call_end_tone">Call end tone</string>
    <string name="preference_data_network_usage">Data usage</string>
    <string name="app_name">ChatON Voice &amp; Video Chat</string>
    <string name="conf_center_path">Center Server path</string>
    <string name="conf_call_title">Call Settings</string>
    <string name="conf_model_name">Model Name</string>
    <string name="conf_app_version">Application Version</string>
    <string name="conf_use_sec_audio_engine">전자 오디오 엔진 사용</string>
    <string name="conf_pref_voice_codec">음성 코덱 설정</string>
    <string name="conf_call_receive_camera">Camera mode for incoming call</string>
    <string name="conf_call_front_framesize">[Resolution]Front camera</string>
    <string name="conf_call_back_framesize">[Resolution]Rear camera</string>
    <string name="conf_call_bandwidth">Bandwidth(kbps)</string>
    <string name="conf_call_framerate">Framerate</string>
    <string name="eng_center_title">server access url</string>
    <string name="eng_etc_server_setting">etc server setting</string>
    <string name="eng_front_web">front web</string>
    <string name="eng_mobile_web">mobile web</string>
    <string name="eng_back_office">back office</string>
    <string name="eng_image_server">image server</string>
    <string name="eng_center_server">center server</string>
    <string name="eng_server_level">Center Access Level</string>
</resources>