<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/user_preference_category_layout"
        android:title="@string/preference_general_settings"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/preference_3_1_title"
        android:key="pref_reject_messages_key"
        android:summary="@string/preference_3_1_summary"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_black"
        android:title="@string/preference_3_1_5_title"
        android:key="pref_ringtone_key"
        android:summary="@string/app_name"/>
    <CheckBoxPreference
        android:layout="@layout/user_preference_screen_checkbox_one_line_black"
        android:title="@string/pref_title_vibrate_when_ringing"
        android:key="pref_vibrate_when_ringing_key"
        android:defaultValue="false"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/pref_title_1_8"
        android:key="pref_call_answering_ending_key"
        android:summary="@string/pref_summary_1_8"/>
    <CheckBoxPreference
        android:layout="@layout/user_preference_screen_checkbox_two_line_black"
        android:title="@string/pref_title_1_9"
        android:key="pref_proximity_key"
        android:summary="@string/pref_summary_1_9"
        android:defaultValue="true"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/preference_3_2_title"
        android:key="pref_call_alert_key"
        android:summary="@string/preference_3_2_summary">
        <intent android:action="com.coolots.chaton.USER_SETTING_SUBPAGE_CALL_ALERT"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/preference_data_network_usage"
        android:key="pref_data_usage"
        android:summary="@string/preference_6_2_summary"/>
    <PreferenceCategory
        android:layout="@layout/user_preference_category_layout"
        android:title="@string/preference_5_title"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_black"
        android:title="@string/preference_5_4_title"
        android:key="pref_video_call_quality_key"
        android:summary="@string/low_quality"/>
</PreferenceScreen>
