<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/user_preference_category_layout"
        android:title="@string/callsettings_callalert_call_status_vibrations"/>
    <CheckBoxPreference
        android:layout="@layout/user_preference_screen_checkbox_two_line_black"
        android:title="@string/callsettings_callalert_answer_vibration"
        android:key="pref_anwer_vibration_key"
        android:summary="@string/callsettings_callalert_answer_vibration_summary"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:layout="@layout/user_preference_screen_checkbox_two_line_black"
        android:title="@string/callsettings_callalert_end_vibration"
        android:key="pref_call_end_vibration_key"
        android:summary="@string/callsettings_callalert_end_vibration_summary"
        android:defaultValue="false"/>
    <PreferenceCategory
        android:layout="@layout/user_preference_category_layout"
        android:title="@string/preference_3_2_2_title"/>
    <CheckBoxPreference
        android:layout="@layout/user_preference_screen_checkbox_one_line_black"
        android:title="@string/callsettings_callalert_call_conn_tone"
        android:key="pref_call_connect_tone_key"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:layout="@layout/user_preference_screen_checkbox_one_line_black"
        android:title="@string/callsettings_callalert_minute_minder"
        android:key="pref_minute_minder_key"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:layout="@layout/user_preference_screen_checkbox_one_line_black"
        android:title="@string/callsettings_callalert_call_end_tone"
        android:key="pref_call_end_tone_key"
        android:defaultValue="true"/>
    <PreferenceCategory
        android:layout="@layout/user_preference_category_layout"
        android:title="@string/preference_3_2_3_title"/>
    <CheckBoxPreference
        android:layout="@layout/user_preference_screen_checkbox_two_line_black"
        android:title="@string/preference_3_2_3_title"
        android:key="pref_call_alerts_alerts_on_calls_key"
        android:summary="@string/preference_3_2_3_summary"
        android:defaultValue="false"/>
</PreferenceScreen>
