<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/user_preference_category_layout"
        android:title="@string/last_call"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/voice_call"
        android:key="pref_data_usage_last_voice_key"
        android:summary="@string/preference_6_2_summary"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/call_btn_videocall"
        android:key="pref_data_usage_last_video_key"
        android:summary="@string/preference_6_2_summary"/>
    <PreferenceCategory
        android:layout="@layout/user_preference_category_layout"
        android:title="@string/dialled_call"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/voice_call"
        android:key="pref_data_usage_dial_voice_key"
        android:summary="@string/preference_6_2_summary"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/call_btn_videocall"
        android:key="pref_data_usage_dial_video_key"
        android:summary="@string/preference_6_2_summary"/>
    <PreferenceCategory
        android:layout="@layout/user_preference_category_layout"
        android:title="@string/received_call"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/voice_call"
        android:key="pref_data_usage_receive_voice_key"
        android:summary="@string/preference_6_2_summary"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/call_btn_videocall"
        android:key="pref_data_usage_receive_video_key"
        android:summary="@string/preference_6_2_summary"/>
    <PreferenceCategory
        android:layout="@layout/user_preference_category_layout"
        android:title="@string/all_calls"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/voice_call"
        android:key="pref_data_usage_all_voice_key"
        android:summary="@string/preference_6_2_summary"/>
    <PreferenceScreen
        android:layout="@layout/user_preference_screen_normal_no_next_icon_black"
        android:title="@string/call_btn_videocall"
        android:key="pref_data_usage_all_video_key"
        android:summary="@string/preference_6_2_summary"/>
</PreferenceScreen>
