<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:title="@string/eng_center_title"
        android:key="pref_center_title">
        <EditTextPreference
            android:singleLine="true"
            android:title="@string/conf_center_path"
            android:key="pref_center_path"
            android:defaultValue="xml3/xml.do"/>
        <ListPreference
            android:entries="@array/eng_server_level_list"
            android:title="@string/eng_server_level"
            android:key="pref_server_level"
            android:dialogTitle="@string/eng_server_level"
            android:entryValues="@array/eng_server_level_list_value"/>
        <PreferenceCategory
            android:enabled="false"
            android:title="@string/eng_etc_server_setting"
            android:key="pref_etc_server_setting"
            android:shouldDisableView="true">
            <EditTextPreference
                android:singleLine="true"
                android:title="@string/eng_front_web"
                android:key="pref_front_web"
                android:defaultValue="70.90.211.15"
                android:shouldDisableView="true"/>
            <EditTextPreference
                android:singleLine="true"
                android:title="@string/eng_mobile_web"
                android:key="pref_mobile_web"
                android:defaultValue="70.90.211.15"
                android:shouldDisableView="true"/>
            <EditTextPreference
                android:singleLine="true"
                android:title="@string/eng_back_office"
                android:key="pref_back_office"
                android:defaultValue="70.90.211.15"/>
            <EditTextPreference
                android:singleLine="true"
                android:title="@string/eng_image_server"
                android:key="pref_image_server"
                android:defaultValue="70.90.211.15/images"/>
            <EditTextPreference
                android:singleLine="true"
                android:title="@string/eng_center_server"
                android:key="pref_center_domain"
                android:defaultValue="70.90.211.20"/>
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen
        android:enabled="false"
        android:title="@string/conf_call_title"
        android:key="pref_center_title">
        <EditTextPreference
            android:enabled="false"
            android:singleLine="true"
            android:title="@string/conf_model_name"
            android:key="pref_model_name"
            android:defaultValue="SHW-M110S"/>
        <EditTextPreference
            android:enabled="false"
            android:singleLine="true"
            android:title="@string/conf_firmware_version"
            android:key="pref_firmware_version"
            android:defaultValue="FROYO.TC22"/>
        <EditTextPreference
            android:enabled="false"
            android:singleLine="true"
            android:title="@string/conf_app_version"
            android:key="pref_app_version"
            android:defaultValue="1.0.60"/>
        <CheckBoxPreference
            android:title="@string/conf_use_sec_audio_engine"
            android:key="pref_use_sec_audio_engine"
            android:defaultValue="false"/>
        <ListPreference
            android:entries="@array/conf_voice_codec_list"
            android:title="@string/conf_pref_voice_codec"
            android:key="pref_voice_codec"
            android:defaultValue="0"
            android:dialogTitle="@string/conf_pref_voice_codec"
            android:entryValues="@array/conf_voice_codec_list_value"/>
        <ListPreference
            android:entries="@array/conf_cam_list"
            android:title="@string/conf_call_receive_camera"
            android:key="pref_call_receive_camera"
            android:defaultValue="1"
            android:dialogTitle="@string/conf_call_receive_camera"
            android:entryValues="@array/conf_cam_list_value"/>
        <ListPreference
            android:entries="@array/conf_front_framesize_list"
            android:title="@string/conf_call_front_framesize"
            android:key="pref_call_front_framesize"
            android:defaultValue="1"
            android:dialogTitle="@string/conf_call_front_framesize"
            android:entryValues="@array/conf_front_framesize_list_value"/>
        <ListPreference
            android:entries="@array/conf_back_framesize_list"
            android:title="@string/conf_call_back_framesize"
            android:key="pref_call_back_framesize"
            android:defaultValue="5"
            android:dialogTitle="@string/conf_call_back_framesize"
            android:entryValues="@array/conf_back_framesize_list_value"/>
        <ListPreference
            android:entries="@array/conf_framerate_list"
            android:title="@string/conf_call_framerate"
            android:key="pref_call_framerate"
            android:defaultValue="15"
            android:dialogTitle="@string/conf_call_framerate"
            android:entryValues="@array/conf_framerate_list_value"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="integer"
            android:title="@string/conf_call_bandwidth"
            android:key="pref_call_bandwidth"
            android:defaultValue="384"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="integer"
            android:title="Q-Factor"
            android:key="pref_ssh_q_factor"
            android:defaultValue="10"/>
        <ListPreference
            android:entries="@array/conf_noise_supression_list"
            android:title="NS"
            android:key="pref_noise_supression"
            android:defaultValue="4"
            android:dialogTitle="Noise Supression"
            android:entryValues="@array/conf_noise_supression_list_value"/>
        <ListPreference
            android:entries="@array/conf_aec_mode_list"
            android:title="AEC MODE"
            android:key="pref_aec_mode"
            android:defaultValue="2"
            android:dialogTitle="AEC MODE"
            android:entryValues="@array/conf_aec_mode_list_value"/>
        <ListPreference
            android:entries="@array/conf_vad_toggle_list"
            android:title="VAD"
            android:key="pref_vad_toggle"
            android:defaultValue="0"
            android:dialogTitle="VAD"
            android:entryValues="@array/conf_vad_toggle_list_value"/>
        <ListPreference
            android:entries="@array/conf_fec_toggle_list"
            android:title="FEC"
            android:key="pref_fec_toggle"
            android:defaultValue="1"
            android:dialogTitle="FEC"
            android:entryValues="@array/conf_fec_toggle_list_value"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="integer"
            android:title="Audio Record Buffer Size"
            android:key="pref_audio_record_buf"
            android:defaultValue="4170"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="integer"
            android:title="Audio Track Buffer Size"
            android:key="pref_audio_track_buf"
            android:defaultValue="4160"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="integer"
            android:title="SampleRate"
            android:key="pref_audio_samplerate"
            android:defaultValue="44100"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="integer"
            android:title="Audio Delay"
            android:key="pref_audio_delay"
            android:defaultValue="180"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="decimal"
            android:title="Speaker Mode Mic Gain"
            android:key="pref_speaker_mode_mic_gain"
            android:defaultValue="2"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="integer"
            android:title="Speaker Mode AGC Value"
            android:key="pref_speaker_mode_agc_value"
            android:defaultValue="2"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="decimal"
            android:title="Normal Mode Mic Gain"
            android:key="pref_normal_mode_mic_gain"
            android:defaultValue="1"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="integer"
            android:title="Normal Mode AGC Value"
            android:key="pref_normal_mode_agc_value"
            android:defaultValue="1"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="integer"
            android:title="Mic Volume"
            android:key="pref_mic_volume"
            android:defaultValue="1"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="decimal"
            android:title="Audio Volume"
            android:key="pref_audio_volume"
            android:defaultValue="1.2"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="decimal"
            android:title="Normal Mode Mic Gain After AEC"
            android:key="pref_normal_mode_mic_gain_after_aec"
            android:defaultValue="4"/>
        <EditTextPreference
            android:singleLine="true"
            android:numeric="decimal"
            android:title="Speaker Mode Mic Gain After AEC"
            android:key="pref_speaker_mode_mic_gain_after_aec"
            android:defaultValue="5"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:enabled="false"
        android:title="Backup Member Info"
        android:key="pref_center_title">
        <EditTextPreference
            android:enabled="false"
            android:singleLine="true"
            android:title="User ID"
            android:key="pref_backup_id"
            android:defaultValue=""/>
        <EditTextPreference
            android:enabled="false"
            android:singleLine="true"
            android:title="Country Code"
            android:key="pref_backup_country"
            android:defaultValue=""/>
        <EditTextPreference
            android:enabled="false"
            android:singleLine="true"
            android:title="Samsung Account ID"
            android:key="pref_backup_account_id"
            android:defaultValue=""/>
        <EditTextPreference
            android:enabled="false"
            android:singleLine="true"
            android:title="Samsung Account country"
            android:key="pref_backup_account_country"
            android:defaultValue=""/>
        <EditTextPreference
            android:enabled="false"
            android:singleLine="true"
            android:title="Samsung Account phoneno"
            android:key="pref_backup_account_phoneno"
            android:defaultValue=""/>
        <EditTextPreference
            android:enabled="false"
            android:singleLine="true"
            android:title="Samsung Account username"
            android:key="pref_backup_account_username"
            android:defaultValue=""/>
        <EditTextPreference
            android:enabled="false"
            android:singleLine="true"
            android:title="Samsung Account email"
            android:key="pref_backup_account_email"
            android:defaultValue=""/>
    </PreferenceScreen>
    <PreferenceScreen
        android:enabled="false"
        android:title="Device Serial Number"
        android:key="pref_serial_no">
        <EditTextPreference
            android:singleLine="true"
            android:title="Serial Number"
            android:key="pref_serial_number"
            android:defaultValue=""/>
    </PreferenceScreen>
</PreferenceScreen>
